--- a/app/views/templates/article.html
+++ b/app/views/templates/article.html
@@ -12,12 +12,20 @@
     <span class="author" ng-if="document.author != null"> · by {{ document.author }}</span>
     <span class="timestamp"> · {{ document.timestamp | fromNow }}</span>
     <ul class="tags">
-      <li ng-repeat="topic in document.relatedtopics | limitTo:3">
+      <li ng-repeat="topic in document.relatedtopics | limitTo:2">
       <a href="#" class="tag">{{ topic.name }}</a>
       </li>
     </ul>
   </div>
   <div class="content_row">
-    <p class="summary">{{ document.summary[0] }}</p>
+    <div class="image_cover" ng-if="document.cover_url != null">
+      <img ng-src="document.cover_url" alt="Cover Image" height="100" width="100" />
+    </div>
+    <div class="text_content">
+      <p class="summary">
+        {{ document.summary[0] | limitTo:350 }}
+        <span ng-if="document.summary[0].length > 350">...</span>
+      </p>
+    </div>
   </div>
 </div>
