not always request

--- a/app/views/templates/article.html
+++ b/app/views/templates/article.html
@@ -1,6 +1,6 @@
 <div class="article">
   <div class="title_row">
-    <a class="article_title" ng-href="{{ document.url }}" ng-attr-title="{{ document.title }}">
+    <a class="article_title" href ng-click="visitLink()" ng-attr-title="{{ document.title }}">
       {{ document.title }}
     </a>
   </div>
