--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="content">
   <ul class="articles">
     <li ng-repeat="document in main.documents">
-      <article document='document'>
+      <article section='main.section' document='document'>
     </li>
   </ul>
 </div>
